--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^11.4.0",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
